test/valid/41625_MethodBodyIsSubtype/MethodBodyIsSubtype.plume
/**
 * Valid Test.
 * Return expression is subtype of return type. 
 * @author FábioBotelho - 41625@alunos.fc.ul.pt
 * @version $id 
 */
 
 
 class MethodBodyIsSubtype extends Object is 
 
 	method test: () -> A is 
 		new B() 
 		